tests/macros/raw_select/mask.stderr
error: option `mask` does not exist for kind `raw_select`
 --> $DIR/mask.rs:2:49
  |
2 |     let q = inquisition::questions![RawSelect { mask: todo!() }];
  |                                                 ^^^^
