tests/macros/raw_select/mask.rs
fn main() {
    let q = inquisition::questions![RawSelect { mask: todo!() }];
}
